# tp-velov

./: .gitignore  01-DonneesVelov.ipynb  02-ZoneDesservie.ipynb  03-CartoVelosProches.ipynb  04-CartoNombreVelos.ipynb  LICENSE  README.md  docker-compose.yml  jupyterlite-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
content/: 01-DonneesVelov.ipynb  02-ZoneDesservie.ipynb  03-CartoVelosProches.ipynb  04-CartoNombreVelos.ipynb
content/datasets/tests/: template_raster.tif
content/pyvelov/: carto.py  desserte.py
datasets/output/: README.md  distances.tif  nb_velos.tif  stations.gpkg  zone_desservie.gpkg
datasets/tests/: stations.gpkg  zone_desservie.gpkg
pyvelov/: data.py
scripts/: README.md
tests/: test_01-DonneesVeloV.py  test_02-ZoneDesservie.py
