[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyvelov"
version = "1.0"
dependencies = [
  "pytest",
  "ipython",
  "numpy",
  "requests",
  "shapely",
  "pandas",
  "geopandas",
  "rasterio",
  "matplotlib",
  "sqlalchemy",
  "geoalchemy2",
  "psycopg2-binary",
]
